--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
   color:#131313;
   width: 100%;
   max-width: 1000px;
+  height: 100vh;
   margin: 0 auto;
   background: #f4a0ac;
 }
@@ -85,15 +86,14 @@ header h1 {
   align-items: flex-start;
 }
 .show {
-  opacity: 1;
+  display:block;
   height: 200px;
   transform: translate3d(0, 0px, 0);
   margin-bottom: 5%;
   transition: all 0.3s linear;
 }
 .hide {
-  opacity: 0;
-  height: 0px;
+  display:none;
   margin-bottom: 0;
   transform: translate3d(0, -50px, 0);
   transition: all 0.3s linear;
@@ -102,191 +102,124 @@ header h1 {
   transform: rotate(-180deg);
 }
 
-
-.swiper {
-  width: 100%;
-  padding:0 15px;
-  box-sizing: border-box;
-  height: 350px;
-  margin: 0 auto;
+.carousel-container{
   position: relative;
+  height: 440px;
+}
+.carousel {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+.item-container{
+  position: relative;
+  width: 100%;
   overflow: hidden;
 }
-.swiper-title {
-  font-size: 30px;
-  margin-bottom: 2%;
+.item{
+  display:none;
+  position: relative;
+  margin: 0 auto;
+  animation: 0.5s ease-in-out;
 }
-.swiper-slide {
-  font-size: 18px;
-  background: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.swiper_slide-about,
-.swiper_slide-image {
-  flex-basis: 40%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
+.item img{
+  width:100%;
+  height:auto;
+  display: block;
 }
 
-.swiper_slide-title,
-.swiper_slide-list {
-  padding-top: 5%;
-  padding-left: 3%;
+.item.active, .item.next{
+  display:block;
 }
-
-.swiper_slide-title {
-  font-size: 28px;
-  font-weight: bold;
+.item.next{
+  position: absolute;
+  top:0;
+  width: 100%;
 }
-.swiper_slide-list {
-  list-style-type: circle;
-  height: 55%;
-  line-height: 130%;
-}
-.swiper_slide-click {
+.description{
+  margin: 30px 20%;
+  font-size: 1.6em;
+  border:2px solid black;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  height: 20%;
-  width: 90%;
 }
-.swiper_slide-click_img {
-  height: 82%;
-  width: 20%;
+.project-name{
+  padding:10px;
 }
-.swiper_slide-click_text {
-  font-size: 23px;
+.control{
+  position: absolute;
+  top:0;
+  bottom:0;
+  width:15%;
+  cursor: pointer;
 }
-.swiper_slide-image_first {
-  background-image: url(assets/theyalow-screenshot.jpg);
+.control.left{
+  left:0;
+  right: auto;
 }
-.swiper_slide-image_second {
-  background-image: url(assets/repair-design-project-screenshot.png);
+.control.right{
+  right:0;
+  left: auto;
 }
-.swiper-button-next:after,
-.swiper-button-prev:after {
-    font-family: 0;
-    font-size: 0;
-    text-transform: 0;
+.arrow{
+  display: inline-block;
+  position: absolute;
+  top:50%;
+  transform: translateY(-50%);
+  font-size: 85px;
 }
-.swiper-button-next {
-  background-image: url(assets/arrow-right.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 6%;
-  height: 15%;
+.arrow.left{
+  left:50%;
 }
-.swiper-button-prev {
-  background-image: url(assets/arrow-left.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 6%;
-  height: 15%;
+.arrow.right{
+  right:50%;
 }
-.swiper-button-next,
-.swiper-container-rtl .swiper-button-prev {
-    right: 5px;
-    left: auto;
+.to-left{
+  animation-name: left;
 }
-.swiper-button-prev,
-.swiper-container-rtl .swiper-button-next {
-    left: 5px;
-    right: auto;
+.to-right{
+ animation-name: right;
+ animation-direction: reverse;
 }
-.swiper_slide-image_click,
-.swiper_slide-image_swipe_text {
-  display: none;
+.from-left{
+  animation-name: left;
+  animation-direction: reverse;
+}
+.from-right{
+  animation-name: right;
+}
+@keyframes left{
+  from{
+    left:0;
+  }
+  to{
+    left:100%;
+  }
+}
+@keyframes right{
+  from{
+    left:100%;
+  }
+  to{
+    left:0;
+  }
 }
 
-
-
-@media screen and (max-width: 375px) {
-  .portfolio_wrapper {
-    width: 350px;
-  }
-  .header__my-photo {
-    width: 100px;
-  }
- 
-  .swiper {
-    height: 400px;
-  }
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: none;
-  }
-  .swiper-title,
-  .about_block-name {
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .swiper-slide {
-    display: block;
-    position: relative;
-  }
-  .swiper_slide-about {
-    width: 90%;
-    height: 60%;
-    position: absolute;
-    background-color: white;
-    top: 20%;
-    left: 5%;
-    transition: all 0.5s linear;
-    opacity: 0;
-  }
-  .show-description {
-    opacity: 1;
-    transition: all 0.5s linear;
-  }
-  .hide-description {
-    opacity: 0;
-    transition: all 0.5s linear;
-  }
-  .swiper_slide-list {
-    list-style-type: none;
-  }
-  .swiper_slide-click {
-    display: none;
-  }
-  .swiper_slide-image {
-    width: 100%;
-    height: 90%;
-    display: flex;
+@media (max-width:960px){
+  .description{
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
   }
-  .swiper_slide-image_click {
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    width: 90%;
-    height: 11%;
-    line-height: 200%;
-    padding: 1%;
+}
+@media (max-width:640px){
+  .arrow, .project-name{
+    display: none;
   }
-  .swiper_slide-image_swipe_text {
-    display: inline;
-    color: white;
-  }
-  .swiper_slide-image_click_dot {
-    width: 35px;
-    height: 35px;
-    border: 2px solid white;
-    border-radius: 100%;
-    background-color: transparent;
+  .description{
+    border:0;
   }
 }
