--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
 body{
-  background: black;
+  background: white;
+}
+
+strong{
+  font-weight: bold;
 }
 .portfolio_wrapper {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
+  background-color: rgba(97, 97, 97, 0.5);
+  font-size: 16px;
+  line-height: 1.3;
   color:#131313;
   width: 100%;
+  height:100%;
   max-width: 1000px;
-  height: 100vh;
   margin: 0 auto;
-  background: #f4a0ac;
 }
 header {
   display: flex;
   justify-content: center;
   align-items: center;
   height:240px;
+  padding-bottom: 5%;
 }
 header h1 {
   font-size: 1px;
@@ -35,6 +41,7 @@ header h1 {
 }
 .header__block-name {
   font-size: 2.3em;
+  padding-top: 0.8em;
   padding-bottom: 1.1em;
   font-weight: bold;
 }
@@ -46,37 +53,54 @@ header h1 {
   margin-bottom: 15px;
 }
 .header__about-block a:hover{
-  text-shadow: 0 0 5px white;
+  text-decoration: underline;
 }
-
-
 
 .education_block {
-  margin-top: 5%;
-  border-top: 2px solid black;
-  font-size: 28px;
   width: 100%;
 }
-.education_block__nav {
+.education_block__nav, .projects_block__nav {
+  font-size: 2em;
   display: flex;
-  border-bottom: 1px solid white;
-  color:white;
-  background: #e30425;
+  border-top: 4px solid black;
+  border-bottom: 2px solid black;
+  background: #f4a0ac;
   justify-content: space-between;
   align-items: center;
   height: 50px;
   padding:0 15px;
 }
-.education_block__nav:hover {
+.education_block__nav{
+  border-bottom:none;
+}
+.education_block__nav.show{
+  border-bottom: 2px solid black;
+}
+.education_block__nav.show, .education_block__nav:hover {
   cursor: pointer;
   background-color: rgba(97, 97, 97, 0.5);
 }
 .education_block__arrow {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   transition: all 0.5s linear;
+  transform: rotate(-90deg);
+  font-weight: bold;
 }
-.education_block__content {
-  height: 200px;
-  margin-top: 5%;
+.show .education_block__arrow {
+  transform: rotate(90deg);
+}
+.education_block__content{
+  display: none;
+  background: white;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+.education_block__content ul{
+  padding:20px 0 35px 35px;
+  font-size: 1.3em;
+}
+.education_block__content li{
+  margin:0 0 15px;
 }
 .education_block__list {
   height: 100%;
@@ -85,35 +109,17 @@ header h1 {
   justify-content: space-between;
   align-items: flex-start;
 }
-.show {
-  display:block;
-  height: 200px;
-  transform: translate3d(0, 0px, 0);
-  margin-bottom: 5%;
-  transition: all 0.3s linear;
-}
-.hide {
-  display:none;
-  margin-bottom: 0;
-  transform: translate3d(0, -50px, 0);
-  transition: all 0.3s linear;
-}
 .rotate {
   transform: rotate(-180deg);
 }
 
 .carousel-container{
   position: relative;
-  height: 440px;
 }
 .carousel {
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
-  position: absolute;
-  top:50%;
-  left:50%;
-  transform: translate(-50%, -50%);
 }
 .item-container{
   position: relative;
@@ -126,12 +132,27 @@ header h1 {
   margin: 0 auto;
   animation: 0.5s ease-in-out;
 }
+.item a{
+  width:50%;
+  display: block;
+  position: relative;
+}
+.item .btn{
+  position: absolute;
+  width:20px;
+  height: 20px;
+  top:-18px;
+  right:10px;
+  border-radius:50%;
+  border:2px solid black;
+  display: none;
+  cursor: pointer;
+}
 .item img{
   width:100%;
   height:auto;
   display: block;
 }
-
 .item.active, .item.next{
   display:block;
 }
@@ -142,20 +163,40 @@ header h1 {
 }
 .description{
   margin: 30px 20%;
-  font-size: 1.6em;
   border:2px solid black;
   display: flex;
   justify-content: space-between;
+  background: white;
+  position: relative;
+}
+.description h3{
+  font-size: 1.4em;
+  margin:0 0 0.5em;
 }
 .project-name{
   padding:10px;
+  width: 50%;
+  box-sizing: border-box;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
-.control{
+.project-name ul{
+  margin: 15px 0 0 30px;
+}
+.project-name li{
+  margin:0 0 7px;
+  list-style: disc;
+}
+  .control{
   position: absolute;
   top:0;
   bottom:0;
   width:15%;
   cursor: pointer;
+  opacity: 0.8;
+}
+.control:hover{
+  opacity:1;
 }
 .control.left{
   left:0;
@@ -166,6 +207,7 @@ header h1 {
   left: auto;
 }
 .arrow{
+  font-family: Georgia, 'Times New Roman', Times, serif;
   display: inline-block;
   position: absolute;
   top:50%;
@@ -214,12 +256,33 @@ header h1 {
     flex-direction: column;
     align-items: center;
   }
+  .description a, .project-name{
+    width: 100%;
+  }
 }
 @media (max-width:640px){
-  .arrow, .project-name{
+  .arrow{
     display: none;
+  }
+  .project-name{
+    position: absolute;
+    width:80%;
+    background: white;
+    top:25px;
+    right:10%;
+    padding:20px 10px;
+    opacity: 0;
+  }
+  .project-name.show-desc{
+    opacity: 1;
+    z-index: 2;
   }
   .description{
     border:0;
+    padding-top:20px;
+    background: none;
+  }
+  .item  .btn{
+    display: block;
   }
 }
